radix-engine-tests/tests/dec_macros/src/dec_err_too_many_decimal_places.stderr
error: A decimal cannot have more than eighteen decimal places.
 --> src/dec_err_too_many_decimal_places.rs:4:29
  |
4 |     const X: Decimal = dec!(1.0000000000000000001);
  |                             ^^^^^^^^^^^^^^^^^^^^^
