radix-engine-tests/tests/dec_macros/src/dec_err_too_many_decimal_places.rs
use radix_common::prelude::*;
use radix_engine_interface::prelude::*;
fn main() {
    const X: Decimal = dec!(1.0000000000000000001);
}
